--- a/Sequence Analysis.ipynb
+++ b/Sequence Analysis.ipynb
@@ -731,7 +731,12 @@
    "source": [
     "## V. Check Pattern Ocurrences\n",
     "\n",
-    "In order to check pattern occurrences we first need to create the sequence, then convert it to TraMineR's `TSE` format, and then create a event sequence from that sequence. That is done below:"
+    "In order to check pattern occurrences we first need to create the sequence, then convert it to TraMineR's `TSE` format, and then create a event sequence from that sequence. \n",
+    "\n",
+    "\n",
+    "The procedure we use here was described by one of the developers [here](http://stackoverflow.com/questions/28111316/find-specific-patterns-in-sequences)\n",
+    "\n",
+    "That is done below:"
    ]
   },
   {
